--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -22,37 +22,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h4>{% trans 'Menu' %}</h4>
-        </div>
-        <div class="panel-body">
-            <ul class="nav nav-pills nav-stacked">
-                <li><a href="{% url 'core:home' %}">{% trans "Home" %}</a></li>
-                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
-                <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
-                <li><a href="{% url 'course:all_courses' %}">{% trans 'All Courses' %}</a></li>
-                <li><a href="{% url 'core:guest' %}">{% trans 'Courses' %}</a></li>
-                {# <li><a href="{% url 'course:participants' %}">{% trans 'Participants' %}</a></li> #}
-                {% if user|has_role:'system_admin' %}
-                    <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
-                {% endif %}
-                {% if user|has_role:'system_admin' or user|has_role:'professor' %}
-                    <li>
-                        <a href="#courses_list" class="accordion" data-toggle="collapse">{% trans 'Manage Courses' %}</a>
-                        <div id="courses_list" class="collapse">
-                            <ul class="nav nav-pill nav-stacked accordion_list">
-                            {% for course in courses_list %}
-                                <li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
-                            {% endfor %}
-                            </ul>
-                        </div>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-
+{{ block.super}}
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h5>{% trans 'Categories' %}</h5>
