--- a/courses/templates/course/update.html
+++ b/courses/templates/course/update.html
@@ -49,4 +49,11 @@
 </br>
 </br>
 </br>
+<script type="text/javascript">
+    var locale = navigator.language || navigator.userLanguage;
+
+    $('.date-picker').datepicker({
+        language: locale,
+    });
+</script>
 {% endblock %}
