--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -109,7 +109,15 @@
                </li>
 
              			<li  data-toggle="tooltip" data-placement="bottom" title data-original-title="{% trans 'messages' %}"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
-             			<li > <a  class="link" href="{% url 'users:profile' %}">{{ user }}</a></li>
+             			<li >
+										<a href="" data-toggle="dropdown">{{ user }}</a>
+										<ul class="dropdown-menu pull-right">
+	                    <li><a href="{% url 'users:profile' %}">{% trans 'Perfil' %}</a></li>
+	                    <li><a href="{% url 'users:update_profile' %}">{% trans 'Edit Profile' %}</a></li>
+	                    <li><a href="{% url 'users:change_password' %}">{% trans 'Change password' %}</a></li>
+	                    <li><a href="{% url 'users:remove_account' %}">{% trans 'Remove account' %}</a></li>
+                  	</ul>
+									</li>
              			<li data-toggle="tooltip" data-placement="bottom" title data-original-title="log out"> <a href="{% url 'core:logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
            		</ul>
          		</div>
