--- a/users/templates/users/view.html
+++ b/users/templates/users/view.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %}
+{% extends 'users/profile.html' %}
 
 {% load static i18n %}
 
@@ -7,26 +7,6 @@
 	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
 	  	<li class="active">{{ acc }}</li>
 	</ol>
-{% endblock %}
-
-{% block sidebar %}
-	<div class="list-group">
-	  	<a href="{% url 'users:manage' %}" class="list-group-item">
-	    	{% trans 'System Users' %}
-	  	</a>
-	  	<a href="{% url 'users:create' %}" class="list-group-item">
-	    	{% trans 'New Account' %}
-	  	</a>
-	  	<a href="{% url 'users:view' acc.username %}" class="list-group-item active">
-	    	{% trans 'View User Account' %}
-	  	</a>
-	  	<a href="{% url 'users:update' acc.username %}" class="list-group-item">
-	    	{% trans 'Edit User Account' %}
-	  	</a>
-	  	<a href="#" class="list-group-item">
-	    	{% trans 'Send Mail' %}
-	  	</a>
-	</div>
 {% endblock %}
 
 {% block content %}
