concertando alguns erros de design #205

--- a/courses/templates/course/create.html
+++ b/courses/templates/course/create.html
@@ -43,7 +43,7 @@
 				</div>
 			{% endfor %}
 			<div class="row text-center">
-					<input type="submit" value="{% trans 'Create' %}" class="btn btn-primary" />
+					<input type="submit" value="{% trans 'Create' %}" class="btn btn-primary btn-raised" />
 			</div>
       	</form>
 	</div>
