--- a/courses/templates/course/update.html
+++ b/courses/templates/course/update.html
@@ -41,7 +41,7 @@
 				</div>
 			{% endfor %}
 			<div class="row text-center">
-					<input type="submit" value="{% trans 'Update' %}" class="btn btn-primary" />
+					<input type="submit" value="{% trans 'Update' %}" class="btn btn-primary btn-raised" />
 			</div>
     </form>
 	</div>
