--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -77,8 +77,8 @@
         <div>
         </div>
         <div class="modal-footer">
-          <button type="button" data-dismiss="modal" class="btn btn-default">{% trans "Cancel" %}</button>
-          <a href="#" target="_self"><button type="button" class="btn btn-primary"> {% trans "Confirm" %}</button></a>
+          <button type="button" data-dismiss="modal" class="btn btn-default btn-raised">{% trans "Cancel" %}</button>
+          <a href="#" target="_self"><button type="button" class="btn btn-primary btn-raised"> {% trans "Confirm" %}</button></a>
         </div>
       </div>
     </div>
