modifying buttons cancel #205

--- a/poll/templates/poll/create.html
+++ b/poll/templates/poll/create.html
@@ -144,7 +144,7 @@
       <div class="modal-footer">
 
         <!-- Don't remove that!!!  -->
-        <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
+        <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
         {% block button_save %}
         <!-- Put curtom buttons here!!!  -->
         <button type="submite" id="button" form="form" class="btn btn-primary btn-raised">{% trans "Create" %}</button>
