--- a/users/templates/users/remove_account.html
+++ b/users/templates/users/remove_account.html
@@ -32,7 +32,7 @@
               <a href="{% url 'users:remove' user.username %}" class="btn btn-raised btn-block btn-success" >{% trans 'Remove' %}</a>
           </div>
           <div class="col-md-3 col-sm-2 col-xs-2">
-              <a href="{% url 'users:profile' %}" class="btn btn-raised btn-block btn-danger" >{% trans 'Cancel' %}</a>
+              <a href="{% url 'users:profile' %}" class="btn btn-raised btn-block btn-default" >{% trans 'Cancel' %}</a>
           </div>
         </div>
       </div>
