--- a/users/templates/users/update.html
+++ b/users/templates/users/update.html
@@ -6,10 +6,10 @@
 {% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
-	
+
 	{{ block.super }}
 	{% breadcrumb 'Update User' 'users:update' %}
-    
+
 {% endblock %}
 
 
@@ -80,7 +80,7 @@
 						<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
 					</div>
 					<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
-						<a href="{% url 'users:manage' %}" class="btn btn-raised btn-danger" >{% trans 'Cancel' %}</a>
+						<a href="{% url 'users:manage' %}" class="btn btn-raised btn-default" >{% trans 'Cancel' %}</a>
 					</div>
 				</form>
 			</div>
