--- a/users/templates/users/change_password.html
+++ b/users/templates/users/change_password.html
@@ -44,7 +44,7 @@
                 <input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-block btn-success" />
             </div>
             <div class="col-md-3 col-sm-2 col-xs-2">
-                <a href="{% url 'users:profile' %}" class="btn btn-raised btn-block btn-danger" >{% trans 'Cancel' %}</a>
+                <a href="{% url 'users:profile' %}" class="btn btn-raised btn-block btn-default" >{% trans 'Cancel' %}</a>
             </div>
            </div>
         </form>
