--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -99,7 +99,7 @@
 						<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
 					</div>
 					<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
-						<a href="{% url 'users:profile' %}" class="btn btn-raised btn-danger" >{% trans 'Cancel' %}</a>
+						<a href="{% url 'users:profile' %}" class="btn btn-raised btn-default" >{% trans 'Cancel' %}</a>
 					</div>
 				</form>
 			</div>
