--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -1,4 +1,4 @@
-{% load static i18n list_topic_foruns permission_tags widget_tweaks professor_access%}
+{% load static i18n list_topic_foruns permission_tags widget_tweaks professor_access list_topic_exercises%}
 
 <div class="panel panel-default cards-detail">
   <div class="panel-heading topic">
@@ -56,7 +56,7 @@
 
       {# materiais do topico#}
       <div class="row">
-        <div class="col-xs-6 col-md-6">
+        <div class="col-xs-4 col-md-4">
           <div class="resource_inline">
             <h4>{% trans 'Material' %}</h4>
           </div>
@@ -122,7 +122,23 @@
               {% list_topic_foruns request topic %}
             </ul>
           </div>
-
+        </div>
+        <div class="col-xs-4 col-md-4">
+          <div class="resource_inline">
+            <h4>{% trans 'Exercises' %}</h4>
+          </div>
+          <div class="presentation_{{exercise.slug}}">
+            {# exercício do tópico no modo de visualização #}
+            <ul>
+              {% list_topic_exercise request %}
+            </ul>
+          </div>
+          <div class="editation editation_{{exercise.slug}}">
+            {# exercício do tópico no modo de edição #}
+            <ul>
+              {% list_topic_exercise_edit request exercise %}
+            </ul>
+          </div>
         </div>
       </div>
 
