--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block sidebar %}
-	
+
 {% endblock sidebar %}
 
 
@@ -47,7 +47,7 @@
 									<div class="col-md-10">
 										{% if field.auto_id == 'id_birth_date' %}
 											{% render_field field class='form-control input-sm date-picker' %}
-											
+
 											<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 										{% elif field.auto_id == 'id_image' %}
 											{% render_field field class='form-control input-sm' %}
@@ -62,7 +62,7 @@
 							            {% elif field.auto_id == 'id_curriculum' %}
 											{% render_field field class='form-control input-sm' %}
 											<div class="input-group">
-							                    <input type="text" readonly="" class="form-control" placeholder="{% trans 'Chose your file ...' %}">
+							                    <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose the file ...' %}">
 							                    <span class="input-group-btn input-group-sm">
 							                        <button type="button" class="btn btn-fab btn-fab-mini">
 							                          	<i class="material-icons">attach_file</i>
@@ -82,7 +82,7 @@
 											<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 										{% endif %}
 									</div>
-									
+
 									{% if field.errors %}
 									<div class="alert alert-danger alert-dismissible col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10" role="alert">
 					  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -98,17 +98,17 @@
 								</div>
 							{% endfor %}
 							<div class="col-md-offset-2 col-md-6 col-sm-offset-2 col-sm-6 col-xs-6 col-xs-offset-2 col-xs-6">
-								<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />	
+								<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />
 							</div>
 							<div class=" col-md-4 col-sm-4 col-xs-4">
-								<a href="{% url 'core:home' %}" class="  btn btn-danger btn-raised" >{% trans 'Cancel' %}</a>	
+								<a href="{% url 'core:home' %}" class="  btn btn-danger btn-raised" >{% trans 'Cancel' %}</a>
 							</div>
-							
+
 						</form>
 					</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<br clear="all" />
 {% endblock %}
